--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,36 +16,52 @@
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+    <div class="container-fluid">
+      <div class="row flex">
+        <div class="col-2">
+          <div class="profile">
+              <div class="profile-area">
+                <div class="profile-picture">
+                  <img src="{{ site.baseurl }}/images/jekyll-logo.png" class="round-pic"/>
+                </div>
+              </div>
+              <div class="detail-area">
+              </div>
+          </div>
+        </div>
+          <div class="col-10">
+          <div class="wrapper-masthead">
+            <div class="container">
+              <header class="masthead clearfix">
+                <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+                <div class="site-info">
+                  <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+                  <p class="site-description">{{ site.description }}</p>
+                </div>
+
+                <nav>
+                  <a href="{{ site.baseurl }}/blog">Blog</a>
+                  <a href="{{ site.baseurl }}/about">About</a>
+                </nav>
+              </header>
+            </div>
           </div>
 
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
+          <div id="main" role="main" class="container">
+            {{ content }}
+          </div>
+
+          <div class="wrapper-footer">
+            <div class="container">
+              <footer class="footer">
+                {% include svg-icons.html %}
+              </footer>
+            </div>
+          </div>
+      </div>
       </div>
     </div>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
-
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
-    </div>
-
     {% include analytics.html %}
   </body>
 </html>
