--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -51,3 +51,50 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
+.col-8 {
+	width: 66.66%
+}
+
+
+.col-4 {
+	width: 33.33%
+}
+
+
+.col-2 {
+	width: 16.66%
+}
+
+
+.col-10 {
+	width: 83.33%
+}
+
+
+.flex{
+	display: flex;
+}
+
+
+.profile {
+	background: #336688;
+	position: relative;
+}
+
+.profile-area {
+	background: black;
+	height: 400px;
+}
+
+.detail-area {
+	height: 100%;
+	background: red;
+}
+
+.profile-picture {
+	margin: 0 auto;
+max-width: 100px;
+}
+
+.round-pic{}
