--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -52,49 +52,18 @@ table {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
-.col-8 {
-	width: 66.66%
+
+.w-clearfix:before,.w-clearfix:after {
+    content: " ";
+    display: table;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2
+}
+
+.w-clearfix:after {
+    clear: both
 }
 
 
-.col-4 {
-	width: 33.33%
-}
-
-
-.col-2 {
-	width: 16.66%
-}
-
-
-.col-10 {
-	width: 83.33%
-}
-
-
-.flex{
-	display: flex;
-}
-
-
-.profile {
-	background: #336688;
-	position: relative;
-}
-
-.profile-area {
-	background: black;
-	height: 400px;
-}
-
-.detail-area {
-	height: 100%;
-	background: red;
-}
-
-.profile-picture {
-	margin: 0 auto;
-max-width: 100px;
-}
-
-.round-pic{}
