--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,15 @@
       </div>
     </div>
     <div class="content-wrapper">
-        {{ content }}
+        {% for post in site.posts %}
+        <article class="overcapture w-clearfix">
+          <h1><a class="text-white" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
+          <div class="entry">
+            {{ post.excerpt }}
+          </div>
+          <a  class="text-white"  href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+        </article>
+      {% endfor %}
     </div>
     
     {% include analytics.html %}
