--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -67,3 +67,16 @@ table {
 }
 
 
+.post {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.center-text {
+	font-family: Georgia,Source Serif Pro,serif;
+  font-style: italic;
+  font-size: 1.5rem;
+  line-height: 3.6rem;
+  margin: 4.8rem 120px;
+  text-align: center;
+}
