--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,11 +1,13 @@
 
 @import url(//db.onlinewebfonts.com/c/272715a0670500b7e64828c113fb6dbc?family=MuseoSansW01-100);
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 //
 // VARIABLES
 //
 
 // Colors
 $blue: #4183C4;
+$base-color: #21A1F4;
 
 // Grays
 $black: #000;
@@ -19,6 +21,7 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$roboto: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
