Making the them responsive

--- a/style.scss
+++ b/style.scss
@@ -15,20 +15,16 @@
 
 html {
   font-size: 100%;
+  height: 100vh;
 }
 
 body {
   background: $lightGray;
   font: 18px/1.4 $roboto;
   color: $darkGray;
+  min-height: 100vh;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 1040px;
-  padding: 0 10px;
-  width: 100%;
-}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $roboto;
@@ -130,168 +126,17 @@ img {
   background: $lightGray;
 }
 
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
 
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
 
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
-  }
-}
-
-//
-// .main
-//
-
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
-}
-
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
-}
-
-.post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-}
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
-
-footer {
-  padding: 20px 0;
-  text-align: center;
-}
-
 .sidebar-wrapper {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  right: 552px;
-  bottom: 0px;
-  z-index: 0;
-  width: 30%;
-  height: 100%;
+  width: 25%;
+  float: left;
+  padding: 15px;
+  height: 100vh;
+  min-width: 25%;
   padding: 75px 85px 20px;
   background-color: $base-color;
   color: #fff;
@@ -312,18 +157,26 @@ footer {
       }
   }
 }
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
+.site-container {
+  box-sizing: border-box;
+  height: 100%;
+}
 
 
 .content-wrapper {
-  position: static;
-  overflow: visible;
-  width: 68%;
-  max-width: 1200px;
-  margin-left: 30%;
-  float: none;
-  clear: none;
+  overflow: scroll;
+  width: 75%;
+  float: left;
+  padding: 15px;
+  height: 100vh;
 }
+
 
 .about_container {
   position: relative;
@@ -332,6 +185,7 @@ footer {
   bottom: 0%;
   width: 65%;
 }
+
 
 .overcapture {
   width: 100%;
@@ -358,6 +212,33 @@ footer {
   height: 100px;
   bottom: 0;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+
+  .sidebar-wrapper {
+    border-radius: 25% / 15%;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+
+  .content-wrapper {
+    width: 98%;
+    overflow: none;
+  }
+
+  .about_container {
+    width: 100%;
+  }
+
+}
+
+
+
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
