--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,18 +14,23 @@
   </head>
 
   <body>
-    <div class="sidebar-wrapper">
-      <div class="about_container">
-          <img src="{{ site.avatar }}" />
-          <h1 data-ix="header-transition" class="about" > <a href="{{ site.baseurl }}/">PAULO CARDOSO</a></h1>
-          <p data-ix="text-slide" class="about-copy" >Solution Architect at <a href="https://backbase.com/" target="_blank" class="link">@Backbase</a>. Software Craftman and Photographers Follow my work and photos.&nbsp;</p>
-          {% include svg-icons.html %}
+    <div class="site-container">
+      <div class="row">
+        <div class="col-item sidebar-wrapper">
+          <div class="about_container">
+            <div class="profile_pic">
+              <img src="{{ site.avatar }}" />
+            </div>
+              <h1 data-ix="header-transition" class="about" > <a href="{{ site.baseurl }}/">PAULO CARDOSO</a></h1>
+              <p data-ix="text-slide" class="about-copy" >Solution Architect at <a href="https://backbase.com/" target="_blank" class="link">@Backbase</a>. Software Craftman and Photographers Follow my work and photos.&nbsp;</p>
+              {% include svg-icons.html %}
+          </div>
+        </div>
+        <div class="col-item content-wrapper">
+            {{ content }}
+        </div>
       </div>
     </div>
-    <div class="content-wrapper">
-        {{ content }}
-    </div>
-    
     {% include analytics.html %}
   </body>
 </html>
