--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,7 +29,8 @@
                     <img src="https://forest-data.unece.org/assets/images/landing/path_1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text">{{ post.excerpt }}</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a type="button" href="{{post.url}}" class="btn btn-warning ">more</a>
                     </div>
                 </div>
             </div>
