--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@
                     <div>
                         <h6 class="mb-0 d-block d-sm-none d-lg-block">HI THERE !</h6>
                         <h1 class="profile-title"><span>I'M</span> PAULO CARDOSO</h1>
-                        <p class="open-sans-font">I'm a Brazilian based in Netherlands working as Solution Architect and
-                            currently working @ Leaseplan Digital. I consider myself a Software Craftman and an Amateur
+                        <p class="open-sans-font">I'm a Brazilian based in Netherlands working as Director of Architect and
+                            currently working @ Ayvens . I consider myself a Software Craftman and an Amateur
                             Photographer.</p>
                     </div>
                 </div>
